--- a/giftgiver/package.json
+++ b/giftgiver/package.json
@@ -14,6 +14,12 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
+  "jest":{
+    "collectCoverageFrom": [
+      "src/**/*.js",
+      "!src/index.js"
+    ]
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
