--- a/lootcheck/package.json
+++ b/lootcheck/package.json
@@ -8,6 +8,7 @@
     "react-redux": "^7.1.1",
     "react-scripts": "3.1.1",
     "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "sfcookies": "^1.0.2"
   },
   "scripts": {
@@ -34,6 +35,8 @@
   "devDependencies": {
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.14.0",
-    "jest-cli": "^20.0.4"
+    "fetch-mock": "^7.3.9",
+    "jest-cli": "^20.0.4",
+    "redux-mock-store": "^1.5.3"
   }
 }
