--- a/lootcheck/package.json
+++ b/lootcheck/package.json
@@ -37,6 +37,7 @@
     "enzyme-adapter-react-16": "^1.14.0",
     "fetch-mock": "^7.3.9",
     "jest-cli": "^20.0.4",
+    "node-fetch": "^2.6.0",
     "redux-mock-store": "^1.5.3"
   }
 }
