--- a/lootcheck/package.json
+++ b/lootcheck/package.json
@@ -18,6 +18,12 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.js",
+      "!src/inde.js"
+    ]
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
